lib/libremidi-5.4.3/tests/corpus/Invalid/No Header Chunk/rain-7.mid
vti_encoding:SR|utf8-nl
vti_author:SR|Diehl
vti_modifiedby:SR|Diehl
vti_timecreated:TR|29 Nov 2000 12:34:56 -0000
vti_timelastmodified:TR|29 Nov 2000 12:34:56 -0000
vti_backlinkinfo:VX|seiten/skiing2.htm seiten/geste1.htm seiten/geste2.htm seiten/midis.htm seiten/wetter.htm seiten/floke.htm seiten/geste2b.htm
vti_extenderversion:SR|4.0.2.2717
